02-仪表盘页面样式开发

--- a/src/assets/styles/variable.scss
+++ b/src/assets/styles/variable.scss
@@ -3,8 +3,10 @@ $themeColorOne: #CCEABB;
 $themeColorTwo: #FDCB9E;
 /* 字体相关 */
 $fontColor: #3F3F44;
+$transparentLineColor: rgba(63, 63, 68, .1);
 $smallFontSize: 12px;
 $mediumFontSize: 14px;
 $largeFontSize: 16px;
 /* 背景相关 */
 $sectionBgColor: #F7F7F7;
+$bgColor: #fff;
